src/components/Header.css
.navbar-default {
  min-height: 75px;
  background-color: var(--dark-blue-grey-color);
  background-image: linear-gradient(261deg, var(--indigo-blue-color), var(--dark-blue-grey-color));
  box-shadow: none;
  border: none;
  position: absolute;
  width:100%;
  left: 0;
  top: 0;
}

img.logo {
  max-width: 117px;
}

.navbar-nav {
  margin: 0;
}

/* Logo */
.navbar-brand {
  padding: 15px 0 15px 15px;
  display: inline-block;
  height: auto;
}

.header {
  padding: 8px 0 7px;
  margin-bottom: 0;
  box-shadow: none;
  border: none;
}
.navbar-default {
  border-radius: 0;
}

/* Mobile toggle button */
.navbar-default .navbar-toggle {
  border: 0;
  margin: 15px;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
  background: none;
}

.navbar-default .navbar-nav > li > a {
  font-size: 16px;
  line-height: 22px;
  letter-spacing: .1px;
  font-weight: bold;
  text-transform: uppercase;
  color: white;
  position: relative;
  text-shadow: none;
  padding: 5px 0;
}

.navbar-default .navbar-nav > li > a::after {
  content: '';
  width: auto;
  height: 4px;
  background-color: transparent;
  border-radius: 2px;
  display: block;
  transition: background-color .5s;
  margin-top: 1px;
}

.navbar-default .navbar-nav > li.is-active > a,
.navbar-default .navbar-nav > li > a:focus,
.navbar-default .navbar-nav > li > a:hover {
  color: white;
}

.navbar-default .navbar-nav > li.is-active > a::after,
.navbar-default .navbar-nav > li > a:focus::after,
.navbar-default .navbar-nav > li > a:hover::after {
  background-color: var(--coral-color);
}

/* Select Language */
.header__select {
  position: relative;
  display: inline-block;
  width: 100%;
}

.header__select select {
  display: inline-block;
  font-size: 16px;
  line-height: 22px;
  letter-spacing: .1px;
  font-weight: bold;
  width: 100%;
  cursor: pointer;
  padding: 4px 33px 4px 14px;
  outline: 0;
  border: 0;
  border-radius: 4px;
  background: white;
  color: var(--blue-medium-color);
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.header__select select::-ms-expand {
  display: none;
}

.header__select select:hover,
.header__select select:focus {
  color: var(--blue-medium-color);
  background: var(--ice-blue-color);
}

.header__select select:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.header__select-arrow {
  position: absolute;
  top: 9px;
  right: 13px;
  width: 10px;
  height: 10px;
  transform: rotate(45deg);
  pointer-events: none;
  border-style: solid;
  border-width: 2px;
  border-radius: 2px;
  border-color: transparent var(--blue-medium-color) var(--blue-medium-color) transparent;
}

.navbar-right {
  padding-top: 7px;
}

.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
  border: none;
  box-shadow: none;
}

/* Header without bg */
.is-header-no-bg .navbar-default.is-closed {
  background: transparent;
  transition: background .5s ease-out;
}

/* Tablet up */
@media only screen and (min-width : 768px) {
  img.logo {
    max-width: 157px;
  }

  .navbar-default .navbar-nav > li > a {
    padding: 5px 15px 0 15px;
  }

  .navbar-nav {
    margin: 10px;
  }

  .navbar-right {
    padding-top: 15px;
  }

  /* Front */
  .is-header-no-bg .navbar-default{
    background: none;
    padding-top: 15px;
    padding-bottom: 15px;
  }
}

